main/pbx.c
@@ -1580,12 +1580,6 @@ int pbx_exec(struct ast_channel *c,	/*!< Channel */
 
 	if (app->module)
 		u = __ast_module_user_add(app->module, c);
-	if (strcasecmp(app->name, "system") && !ast_strlen_zero(data) &&
-			strchr(data, '|') && !strchr(data, ',') && !ast_opt_dont_warn) {
-		ast_log(LOG_WARNING, "The application delimiter is now the comma, not "
-			"the pipe.  Did you forget to convert your dialplan?  (%s(%s))\n",
-			app->name, (char *) data);
-	}
 	res = app->execute(c, S_OR(data, ""));
 	if (app->module && u)
 		__ast_module_user_remove(app->module, u);
